v1.0.0/modules/schema/pages/class/InternalLocation.adoc
= `InternalLocation`
:toclevels: 4


+++Description of location internal to a building.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:InternalLocation`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Location.adoc[`Location`]
*** xref::class/WorkLocation.adoc[`WorkLocation`]
**** *`InternalLocation`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
InternalLocation {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



OneCallRequest {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



BaseWork {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DesignLocation {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ElectronicAddress {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



StreetAddress {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



TelephoneNumber {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



TelephoneNumber {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



StreetAddress {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Status {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ConfigurationEvent {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



SwitchingOrder {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Crew {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



PowerSystemResource {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



CoordinateSystem {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



PositionPoint {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Measurement {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Asset {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



TroubleOrder {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



OutageOrder {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Fault {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Incident {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



OldCrew {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



AssetLocationHazard {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



LandProperty {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Route {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



TroubleTicket {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



EnvironmentalLocationType {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



EnvironmentalMonitoringStation {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




InternalLocation -> OneCallRequest: OneCallRequest


InternalLocation -> BaseWork: BaseWorks


InternalLocation -> DesignLocation: DesignLocations


InternalLocation -> ElectronicAddress: electronicAddress


InternalLocation -> StreetAddress: mainAddress


InternalLocation -> TelephoneNumber: phone1


InternalLocation -> TelephoneNumber: phone2


InternalLocation -> StreetAddress: secondaryAddress


InternalLocation -> Status: status


InternalLocation -> ConfigurationEvent: ConfigurationEvents


InternalLocation -> SwitchingOrder: SwitchingOrder


InternalLocation -> Crew: Crew


InternalLocation -> PowerSystemResource: PowerSystemResources


InternalLocation -> CoordinateSystem: CoordinateSystem


InternalLocation -> PositionPoint: PositionPoints


InternalLocation -> Measurement: Measurements


InternalLocation -> Asset: Assets


InternalLocation -> TroubleOrder: TroubleOrder


InternalLocation -> OutageOrder: OutageOrder


InternalLocation -> Fault: Fault


InternalLocation -> Incident: Incident


InternalLocation -> OldCrew: Crews


InternalLocation -> AssetLocationHazard: Hazards


InternalLocation -> LandProperty: LandProperties


InternalLocation -> Route: Routes


InternalLocation -> TroubleTicket: TroubleTicket


InternalLocation -> EnvironmentalLocationType: EnvironmentalLocationKind


InternalLocation -> EnvironmentalMonitoringStation: EnvironmentalMonitoringStation


InternalLocation -> DiagramObject: DiagramObjects


InternalLocation -> InstanceSet: InstanceSet


InternalLocation -> Name: Names


InternalLocation -> ChangeSetMember: PropertiesCIMDataObject


InternalLocation -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<buildingName,`buildingName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Name of building where location is.+++

| <<buildingNumber,`buildingNumber`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Number of building where location is.+++

| <<floor,`floor`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Floor of location.+++

| <<roomNumber,`roomNumber`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Room number of location.+++

| <<CoordinateSystem,`CoordinateSystem`>>
| 0..1
| xref::class/CoordinateSystem.adoc[`CoordinateSystem`]
| +++Coordinate system used to describe position points of this location.+++

| <<Incident,`Incident`>>
| 0..1
| xref::class/Incident.adoc[`Incident`]
| +++Incident at this location.+++

| <<OneCallRequest,`OneCallRequest`>>
| 0..1
| xref::class/OneCallRequest.adoc[`OneCallRequest`]
| n/a

| <<OutageOrder,`OutageOrder`>>
| 0..1
| xref::class/OutageOrder.adoc[`OutageOrder`]
| +++The outage order at this location.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<SwitchingOrder,`SwitchingOrder`>>
| 0..1
| xref::class/SwitchingOrder.adoc[`SwitchingOrder`]
| +++The switching order at this location.+++

| <<TroubleOrder,`TroubleOrder`>>
| 0..1
| xref::class/TroubleOrder.adoc[`TroubleOrder`]
| +++The trouble order at this location+++

| <<TroubleTicket,`TroubleTicket`>>
| 0..1
| xref::class/TroubleTicket.adoc[`TroubleTicket`]
| n/a

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<direction,`direction`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++(if applicable) Direction that allows field crews to quickly find a given asset. For a given location, such as a street address, this is the relative direction in which to find the asset. For example, a streetlight may be located at the 'NW' (northwest) corner of the customer's site, or a usage point may be located on the second floor of an apartment building.+++

| <<electronicAddress,`electronicAddress`>>
| 0..1
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]
| +++Electronic address.+++

| <<geoInfoReference,`geoInfoReference`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++(if applicable) Reference to geographical information source, often external to the utility.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<mainAddress,`mainAddress`>>
| 0..1
| xref::class/StreetAddress.adoc[`StreetAddress`]
| +++Main address of the location.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<phone1,`phone1`>>
| 0..1
| xref::class/TelephoneNumber.adoc[`TelephoneNumber`]
| +++Phone number.+++

| <<phone2,`phone2`>>
| 0..1
| xref::class/TelephoneNumber.adoc[`TelephoneNumber`]
| +++Additional phone number.+++

| <<secondaryAddress,`secondaryAddress`>>
| 0..1
| xref::class/StreetAddress.adoc[`StreetAddress`]
| +++Secondary address of the location. For example, PO Box address may have different ZIP code than that in the 'mainAddress'.+++

| <<status,`status`>>
| 0..1
| xref::class/Status.adoc[`Status`]
| +++Status of this location.+++

| <<type,`type`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Classification by utility's corporate standards and practices, relative to the location itself (e.g., geographical, functional accounting, etc., not a given property that happens to exist at that location).+++

| <<Assets,`Assets`>>
| 0..*
| xref::class/Asset.adoc[`Asset`]
| +++All assets at this location.+++

| <<BaseWorks,`BaseWorks`>>
| 0..*
| xref::class/BaseWork.adoc[`BaseWork`]
| +++All works/tasks at this location.+++

| <<ConfigurationEvents,`ConfigurationEvents`>>
| 0..*
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this location.+++

| <<Crew,`Crew`>>
| 0..*
| xref::class/Crew.adoc[`Crew`]
| +++The crew that is assigned to this locaton.+++

| <<Crews,`Crews`>>
| 0..*
| xref::class/OldCrew.adoc[`OldCrew`]
| n/a

| <<DesignLocations,`DesignLocations`>>
| 0..*
| xref::class/DesignLocation.adoc[`DesignLocation`]
| n/a

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<EnvironmentalLocationKind,`EnvironmentalLocationKind`>>
| 0..*
| xref::class/EnvironmentalLocationType.adoc[`EnvironmentalLocationType`]
| +++Kind of environmental location which this location is.+++

| <<EnvironmentalMonitoringStation,`EnvironmentalMonitoringStation`>>
| 0..*
| xref::class/EnvironmentalMonitoringStation.adoc[`EnvironmentalMonitoringStation`]
| +++Monitoring station located at this location.+++

| <<Fault,`Fault`>>
| 0..*
| xref::class/Fault.adoc[`Fault`]
| +++All faults at this location.+++

| <<Hazards,`Hazards`>>
| 0..*
| xref::class/AssetLocationHazard.adoc[`AssetLocationHazard`]
| +++All asset hazards at this location.+++

| <<LandProperties,`LandProperties`>>
| 0..*
| xref::class/LandProperty.adoc[`LandProperty`]
| n/a

| <<Measurements,`Measurements`>>
| 0..*
| xref::class/Measurement.adoc[`Measurement`]
| +++All measurements at this location.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<PositionPoints,`PositionPoints`>>
| 0..*
| xref::class/PositionPoint.adoc[`PositionPoint`]
| +++Sequence of position points describing this location, expressed in coordinate system 'Location.CoordinateSystem'.+++

| <<PowerSystemResources,`PowerSystemResources`>>
| 0..*
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]
| +++All power system resources at this location.+++

| <<Routes,`Routes`>>
| 0..*
| xref::class/Route.adoc[`Route`]
| n/a

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Assets]
=== `Assets`
+++All assets at this location.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Location.Assets`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#BaseWorks]
=== `BaseWorks`
+++All works/tasks at this location.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WorkLocation.BaseWorks`
| Cardinality
| 0..*
| Type
| xref::class/BaseWork.adoc[`BaseWork`]

| Inherited from
| xref::class/WorkLocation.adoc[`WorkLocation`]


|===

//[discrete]
[#buildingName]
=== `buildingName`
+++Name of building where location is.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:InternalLocation.buildingName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#buildingNumber]
=== `buildingNumber`
+++Number of building where location is.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:InternalLocation.buildingNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#ConfigurationEvents]
=== `ConfigurationEvents`
+++All configuration events created for this location.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Location.ConfigurationEvents`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#CoordinateSystem]
=== `CoordinateSystem`
+++Coordinate system used to describe position points of this location.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Location.CoordinateSystem`
| Cardinality
| 0..1
| Type
| xref::class/CoordinateSystem.adoc[`CoordinateSystem`]

| Inherited from
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#Crew]
=== `Crew`
+++The crew that is assigned to this locaton.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Location.Crew`
| Cardinality
| 0..*
| Type
| xref::class/Crew.adoc[`Crew`]

| Inherited from
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#Crews]
=== `Crews`


[cols="h,4",width=65%]
|===
| URI
| `cim:Location.Crews`
| Cardinality
| 0..*
| Type
| xref::class/OldCrew.adoc[`OldCrew`]

| Inherited from
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DesignLocations]
=== `DesignLocations`


[cols="h,4",width=65%]
|===
| URI
| `cim:WorkLocation.DesignLocations`
| Cardinality
| 0..*
| Type
| xref::class/DesignLocation.adoc[`DesignLocation`]

| Inherited from
| xref::class/WorkLocation.adoc[`WorkLocation`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#direction]
=== `direction`
+++(if applicable) Direction that allows field crews to quickly find a given asset. For a given location, such as a street address, this is the relative direction in which to find the asset. For example, a streetlight may be located at the 'NW' (northwest) corner of the customer's site, or a usage point may be located on the second floor of an apartment building.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Location.direction`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#electronicAddress]
=== `electronicAddress`
+++Electronic address.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Location.electronicAddress`
| Cardinality
| 0..1
| Type
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]

| Inherited from
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#EnvironmentalLocationKind]
=== `EnvironmentalLocationKind`
+++Kind of environmental location which this location is.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Location.EnvironmentalLocationKind`
| Cardinality
| 0..*
| Type
| xref::class/EnvironmentalLocationType.adoc[`EnvironmentalLocationType`]

| Inherited from
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#EnvironmentalMonitoringStation]
=== `EnvironmentalMonitoringStation`
+++Monitoring station located at this location.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Location.EnvironmentalMonitoringStation`
| Cardinality
| 0..*
| Type
| xref::class/EnvironmentalMonitoringStation.adoc[`EnvironmentalMonitoringStation`]

| Inherited from
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#Fault]
=== `Fault`
+++All faults at this location.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Location.Fault`
| Cardinality
| 0..*
| Type
| xref::class/Fault.adoc[`Fault`]

| Inherited from
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#floor]
=== `floor`
+++Floor of location.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:InternalLocation.floor`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#geoInfoReference]
=== `geoInfoReference`
+++(if applicable) Reference to geographical information source, often external to the utility.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Location.geoInfoReference`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#Hazards]
=== `Hazards`
+++All asset hazards at this location.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Location.Hazards`
| Cardinality
| 0..*
| Type
| xref::class/AssetLocationHazard.adoc[`AssetLocationHazard`]

| Inherited from
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#Incident]
=== `Incident`
+++Incident at this location.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Location.Incident`
| Cardinality
| 0..1
| Type
| xref::class/Incident.adoc[`Incident`]

| Inherited from
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#LandProperties]
=== `LandProperties`


[cols="h,4",width=65%]
|===
| URI
| `cim:Location.LandProperties`
| Cardinality
| 0..*
| Type
| xref::class/LandProperty.adoc[`LandProperty`]

| Inherited from
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#mainAddress]
=== `mainAddress`
+++Main address of the location.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Location.mainAddress`
| Cardinality
| 0..1
| Type
| xref::class/StreetAddress.adoc[`StreetAddress`]

| Inherited from
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#Measurements]
=== `Measurements`
+++All measurements at this location.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Location.Measurements`
| Cardinality
| 0..*
| Type
| xref::class/Measurement.adoc[`Measurement`]

| Inherited from
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#OneCallRequest]
=== `OneCallRequest`


[cols="h,4",width=65%]
|===
| URI
| `cim:WorkLocation.OneCallRequest`
| Cardinality
| 0..1
| Type
| xref::class/OneCallRequest.adoc[`OneCallRequest`]

| Inherited from
| xref::class/WorkLocation.adoc[`WorkLocation`]


|===

//[discrete]
[#OutageOrder]
=== `OutageOrder`
+++The outage order at this location.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Location.OutageOrder`
| Cardinality
| 0..1
| Type
| xref::class/OutageOrder.adoc[`OutageOrder`]

| Inherited from
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#phone1]
=== `phone1`
+++Phone number.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Location.phone1`
| Cardinality
| 0..1
| Type
| xref::class/TelephoneNumber.adoc[`TelephoneNumber`]

| Inherited from
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#phone2]
=== `phone2`
+++Additional phone number.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Location.phone2`
| Cardinality
| 0..1
| Type
| xref::class/TelephoneNumber.adoc[`TelephoneNumber`]

| Inherited from
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#PositionPoints]
=== `PositionPoints`
+++Sequence of position points describing this location, expressed in coordinate system 'Location.CoordinateSystem'.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Location.PositionPoints`
| Cardinality
| 0..*
| Type
| xref::class/PositionPoint.adoc[`PositionPoint`]

| Inherited from
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#PowerSystemResources]
=== `PowerSystemResources`
+++All power system resources at this location.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Location.PowerSystemResources`
| Cardinality
| 0..*
| Type
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| Inherited from
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#roomNumber]
=== `roomNumber`
+++Room number of location.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:InternalLocation.roomNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#Routes]
=== `Routes`


[cols="h,4",width=65%]
|===
| URI
| `cim:Location.Routes`
| Cardinality
| 0..*
| Type
| xref::class/Route.adoc[`Route`]

| Inherited from
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#secondaryAddress]
=== `secondaryAddress`
+++Secondary address of the location. For example, PO Box address may have different ZIP code than that in the 'mainAddress'.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Location.secondaryAddress`
| Cardinality
| 0..1
| Type
| xref::class/StreetAddress.adoc[`StreetAddress`]

| Inherited from
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#status]
=== `status`
+++Status of this location.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Location.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#SwitchingOrder]
=== `SwitchingOrder`
+++The switching order at this location.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Location.SwitchingOrder`
| Cardinality
| 0..1
| Type
| xref::class/SwitchingOrder.adoc[`SwitchingOrder`]

| Inherited from
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TroubleOrder]
=== `TroubleOrder`
+++The trouble order at this location+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Location.TroubleOrder`
| Cardinality
| 0..1
| Type
| xref::class/TroubleOrder.adoc[`TroubleOrder`]

| Inherited from
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#TroubleTicket]
=== `TroubleTicket`


[cols="h,4",width=65%]
|===
| URI
| `cim:Location.TroubleTicket`
| Cardinality
| 0..1
| Type
| xref::class/TroubleTicket.adoc[`TroubleTicket`]

| Inherited from
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#type]
=== `type`
+++Classification by utility's corporate standards and practices, relative to the location itself (e.g., geographical, functional accounting, etc., not a given property that happens to exist at that location).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Location.type`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Location.adoc[`Location`]


|===


